kubernatis_Architecher/api_gateway_development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demowebapi-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demowebapi-gateway
  template:
    metadata:
      labels:
        app: demowebapi-gateway
    spec:
      containers:
        - name: demowebapi-gateway
          image: mehedi259/demo_api_gateway
          imagePullPolicy: Always
