kubernatis_Architecher/api_product_development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demowebapi-api-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demowebapi-product
  template:
    metadata:
      labels:
        app: demowebapi-product
    spec:
      containers:
        - name: demowebapi-product
          image: mehedi259/demo_product_api
          imagePullPolicy: Always
