kubernatis_Architecher/api_gateway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demowebapi-srv-gateway
spec:
  type: NodePort
  selector:
    app: demowebapi-gateway
  ports:
    - name: demowebapi-gateway
      protocol: TCP
      port: 5111
      targetPort: 5601
      nodePort: 32322  

#  nodePort: 32317   it is important to fixed the port
