kubernatis_Architecher/api_product_service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: demowebapi-srv-product
# spec:
#   type: ClusterIP
#   selector:
#     app: demowebapi-product
#   ports:
#     - name: demowebapi-product
#       protocol: TCP
#       port: 5177
#       targetPort: 5602
#       nodePort: 32323  

# #  nodePort: 32317   it is important to fixed the port 

apiVersion: v1
kind: Service
metadata:
  name: demowebapi-srv-product
spec:
  type: NodePort  # Allows external access
  selector:
    app: demowebapi-product
  ports:
    - name: demowebapi-product
      protocol: TCP
      port: 5177          # Service port
      targetPort: 5602    # Port inside the container
      nodePort: 32323     # Fixed external port (range: 30000-32767)
