kubernatis_Architecher/ingree_ngnex_load_balance.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: api-gateway-ingressp-data
#   namespace: default
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   tls:
#   - hosts:
#     - localhost    # Replace with your domain
#     secretName: tls-secret  # Reference the TLS secret
#   rules:
#   - host: localhost
#     http:
#       paths:
#       # - path: /order
#       #   pathType: Prefix
#       #   backend:
#       #     service:
#       #       name: demowebapi-srv-order
#       #       port:
#       #         number: 5178
#       - path: /product(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: demowebapi-srv-product
#             port:
#               number: 5177

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: api-gateway-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#   - host: ""
#     http:
#       paths:
#       - path: /product(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: demowebapi-srv-product
#             port:
#               number: 5177


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /api/Products
        pathType: Prefix
        backend:
          service:
            name: demowebapi-srv-product
            port:
              number: 5177
